--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.6",
     "styled-components": "^5.3.3",
     "sweetalert2": "^11.4.0",
     "uuid": "^8.3.2",
